...
    case arm

    var id: Self { self }

    var title: String {
        switch self {
        case .humanoid: "Humanoid"
        case .arm: "Robot Arm"
        }
    }

    var shortTitle: String {
        switch self {
        case .humanoid: "G1"
        case .arm: "iiwa14"
        }
    }

    var route: String { "/frankenrobots/\(rawValue)/" }

    var symbol: String {
...
